<resources>
    <string name="app_name">aiviewcamera</string>
    <string name="press_here_for_capturing">Click here to capture Vehicle Images</string>
    <string name="btn_capture">Click</string>
    <string name="next">Next</string>
    <string name="rh_side">RH Side</string>
    <string name="capture_in_landscape">Capture in LANDSCAPE MODE only</string>
    <string name="GPSAlertDialogTitle">GPS is setting</string>
    <string name="GPSAlertDialogMessage">GPS is not enabled. Do you want to go to setting menu</string>
    <string name="action_settings">Settings</string>
    <string name="settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="record_in_landscape">Record in LANDSCAPE MODE only</string>
    <string name="autofin_title">AUTOFIN</string>
    <string name="lbl_total_leads">TOTAL</string>
    <string name="lbl_open_leads">OPEN</string>
    <string name="testing_string">loremIpsum</string>
    <string name="testing_number">00</string>
    <string name="lbl_closed_leads">CLOSED</string>
    <string name="lbl_bank_leads">BANK</string>
    <string name="lbl_case_id">Case Id - </string>
    <string name="lbl_call">CALL</string>
    <string name="btn_lbl_complete">COMPLETE</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="rupees_symbol">\u20B9</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="lbl_all_leads">All Leads</string>
    <string name="vehicle_category">PLEASE SELECT YOUR VEHICLE CATEGORY</string>
    <string name="new_car">New Car</string>
    <string name="old_car">Used Car</string>
    <string name="new_bike">New Bike</string>
    <string name="vehicle_details_title">VEHICLE DETAILS</string>
    <string name="vehicle_reg_num_qn">DO YOU HAVE VEHICLE REGISTRATION NO?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="enter_vehicle_reg_no">PLEASE ENTER YOUR VEHICLE REGISTRATION NO</string>
    <string name="lbl_reg_no">Registration No</string>
    <string name="edit_btn_lbl">EDIT   </string>
    <string name="lbl_select_veh_reg_year">SELECT VEHICLE REGISTRATION YEAR</string>
    <string name="lbl_veh_reg_year">VEHICLE REGISTRATION YEAR</string>
    <string name="hint_select_year">Select Year...</string>
    <string name="lbl_select_veh_reg_make">SELECT MAKE</string>
    <string name="hint_select_make">SELECT MAKE...</string>
    <string name="lbl_veh_make">MAKE</string>
    <string name="lbl_select_veh_model">SELECT MODEL</string>
    <string name="hint_select_model">Search Model</string>
    <string name="lbl_select_veh_variant">SELECT VARIANT</string>
    <string name="hint_search_variant">Search Variant...</string>
    <string name="lbl_veh_variant">VARIANT</string>
    <string name="lbl_veh_ownership">OWNERSHIP</string>
    <string name="ownership_01">01</string>
    <string name="ownership_02">02</string>
    <string name="ownership_03">03</string>
    <string name="ownership_04">04</string>
    <string name="ownership_05">05</string>
    <string name="vehicle_have_loan_qn">DOES THE CAR HAVE LOAN CURRENTLY?</string>
    <string name="vehicle_valuation_post_inspection">VEHICLE VALUATION POST INSPECTION</string>
    <string name="lbl_enter_amount">Enter Amount</string>
    <string name="lbl_enter_insurance_amount">Insurance Amount</string>
    <string name="next_btn_text">NEXT</string>
    <string name="vehicle_insurance_validity">INSURANCE VALIDITY</string>
    <string name="date_format_hint">dd mm yyyy</string>
    <string name="vehicle_insurance_type">INSURANCE TYPE FOR YOUR VEHICLE?</string>
    <string name="comprehensive">Comprehensive</string>
    <string name="third_party">Third party</string>
    <string name="sample_reg_no">Eg: KA 01 BR 1234</string>
    <string name="loading">Loading...</string>
    <string name="lbl_insurance_on_vehicle">VALID INSURANCE ON VEHICLE</string>
    <string name="incorrect_reg_no">Please enter valid registration number!</string>
    <string name="reg_no_empty_message">Please enter your vehicle registration number</string>
    <string name="no_stock_available">No stock available ! Please check entered registration number.</string>
    <string name="please_try_again">Please try again. Something went wrong!</string>
    <string name="please_check_internet_connection">Please check your internet connection</string>
    <string name="lbl_veh_model">MODEL</string>
    <string name="title_basic_details">BASIC DETAILS</string>
    <string name="title_upload_documents">UPLOAD DOCUMENTS</string>
    <string name="enter_basic_details">PLEASE ENTER YOUR BASIC DETAILS</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_email">Email</string>
    <string name="sample_email_id">abc@mail.com</string>
    <string name="lbl_phone_no">Phone No.</string>
    <string name="sample_phone_number">9876543210</string>
    <string name="enter_valid_emailid">Enter valid EmailId</string>
    <string name="enter_valid_phone_number">Enter valid phone number</string>
    <string name="enter_valid_name">Enter valid name</string>
    <string name="otp_lbl">Verification Code</string>
    <string name="sample_otp">012345</string>
    <string name="strSecLbl">Sec</string>
    <string name="lbl_resend">Resend OTP</string>
    <string name="lbl_proceed">PROCEED</string>
    <string name="wrong_otp">Incorrect OTP. Please enter correct OTP!</string>
    <string name="str_browse">PLEASE UPLOAD THE VALUATION REPORT IF YOU HAVE</string>
    <string name="str_browse_files">BROWSE</string>
    <string name="str_camera_lbl">CAMERA</string>
    <string name="skip_now">Skip Now</string>
    <string name="lbl_doc_attached">DOCUMENT ATTACHED</string>
    <string name="title_residential_details">RESIDENTIAL DETAILS</string>
    <string name="lbl_res_city">PLEASE ENTER YOUR RESIDENTIAL CITY</string>
    <string name="enter_pincode">Enter Pincode</string>
    <string name="lbl_check_pincode">Check</string>
    <string name="city_lbl">City</string>
    <string name="please_enter_pincode">Please enter Pincode</string>
    <string name="please_enter_proper_pincode">Please enter proper pincode</string>
    <string name="lbl_when_did_you_moved_to_the_city">WHEN DID YOU MOVED TO THE CITY?</string>
    <string name="month_year_format_hint"><![CDATA[Year & Month]]></string>
    <string name="lbl_please_select_month_year">PLEASE SELECT MONTH</string>
    <string name="lbl_when_moved_to_current_residence">WHEN DID YOU MOVED TO CURRENT RESIDENCE?</string>
    <string name="lbl_residence_type">Residence Type</string>
    <string name="lbl_residential_city">RESIDENTIAL CITY</string>
    <string name="lbl_dob">DOB</string>
    <string name="lbl_monthly_income">MONTHLY INCOME</string>
    <string name="sample_pincode">560068</string>
    <string name="title_personal_details">PERSONAL DETAILS</string>
    <string name="monthly_income_error_message">Please enter Your Monthly Income</string>
    <string name="lbl_monthly_emi">TOTAL EMI YOU PAY PER MONTH</string>
    <string name="lbl_loan_required">LOAN REQUIRED</string>
    <string name="lbl_total_emi">TOTAL EMI</string>
    <string name="loan_required_error_message">Please enter required loan amount</string>
    <string name="monthly_emi_error_message">Please enter EMI you pay per month</string>
    <string name="lbl_enter_pan_card">Enter Pan No</string>
    <string name="lbl_please_enter_your_pan_num">PLEASE ENTER YOUR PAN NO.</string>
    <string name="please_enter_pan_number">Please enter your PAN card number</string>
    <string name="please_enter_valid_pan_number">Please enter valid PAN Card no</string>
    <string name="lbl_select_bank_name">SALARY ACCOUNT WITH BANK</string>
    <string name="hint_search_bank">Search Bank</string>
    <string name="search_your_bank">SEARCH YOUR BANK</string>
    <string name="employment_type">EMPLOYMENT TYPE</string>
    <string name="select_btn_text">SELECT</string>
    <string name="loan_06">06</string>
    <string name="lbl_no_pending_loan">No Pending Loans</string>
    <string name="lbl_how_many_existing_loan">HOW MANY EXISTING LOAN YOU HAVE?</string>
    <string name="lbl_working_organization_name">ORGANIZATION WORKING FOR</string>
    <string name="lbl_org_name">Organization Name</string>
    <string name="lbl_joining_date_of_your_current_org">JOINING DATE OF YOUR CURRENT ORGANIZATION</string>
    <string name="lbl_year_of_experience">YEAR OF EXPERIENCE</string>
    <string name="lbl_years">Years</string>
    <string name="please_enter_year_of_experience">Please enter your Year of Experience</string>
    <string name="lbl_sal_mode">Salary Mode</string>
    <string name="vihay_tv_cash_salary">common_layout_select_bank</string>
    <string name="lbl_cash_salary">Cash Salary</string>
    <string name="cheque_bar">Cheque Salary</string>
    <string name="lbl_Transferanddeposit">As transfer  / deposit to salary account</string>
    <string name="lbl_deposit_tranfer">As transfer / deposit to salary account</string>
    <string name="lbl_employment_type">EMPLOYMENT TYPE</string>
    <string name="lbl_owned_by_self_or_spouse">Owner by Self / Spouse</string>
    <string name="lbl_owned_by_parent_sibling">Owned by parent / sibling</string>
    <string name="lbl_rented_with_family">Rented - with Family</string>
    <string name="lbl_rented_with_friends">Rented - with friends</string>
    <string name="lbl_rented_staying_alone">Rented - staying alone</string>
    <string name="lbl_paying_guest">Paying guest</string>
    <string name="lbl_hostel">Hostel</string>
    <string name="lbl_company_provided">Company Provided</string>
    <string name="lbl_earn_monthly_regular_income">Earn regular monthly income</string>
    <string name="lbl_salaried">Salaried</string>
    <string name="lbl_runs_own_business">Runs own business</string>
    <string name="lbl_business_owner">Business Owner</string>
    <string name="lbl_self_employed_professional">Self-employed Professional</string>
    <string name="lbl_own_a_practice">Own a practice(e.g. Doctor, C.A, etc.)</string>
    <string name="lbl_independent_worker">Independent Worker</string>
    <string name="lbl_driver_electrician">(e.g. driver, electrician, farmer, shopkeeper, etc.)</string>
    <string name="lbl_student">Student</string>
    <string name="lbl_retired">Retired</string>
    <string name="lbl_home_maker">Homemaker</string>
    <string name="hint_sample_pan_card">AAAAA1234Z</string>
    <string name="sample_title">TITLE</string>
    <string name="str_review">REVIEW</string>
    <string name="str_you_have_updated_your_details">You have Updated your Details</string>
    <string name="do_you_want_to_review_your_details">Do you want to review your details?</string>
    <string name="str_agree_with_tc">I Agree to the terms and conditions and privacy policy</string>
    <string name="lbl_view_bank">VIEW BANK OFFER</string>
    <string name="vtwo_enter_mob_no">Enter mobile no</string>
    <string name="vtwo_otp_hint">Verification code will sent to this Number</string>
    <string name="vtwo_mobile_num_hint">Mobile No</string>
    <string name="vtwo_country_code">+91</string>
    <string name="otp_timer_hint">0 Sec</string>
    <string name="vtwo_resend_otp">Resend Verification Code</string>
    <string name="vtwo_t_and_c_hint">I Agree to the <i>terms and conditions</i> and <i>privacy policy</i></string>
    <string name="v2_loan_amount">Loan Amount</string>
    <string name="v2_tenure">Tenure</string>
    <string name="v2_tenure_lbl"> Years</string>
</resources>