<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/white_corner"
    android:orientation="vertical"
    android:padding="@dimen/text_size_14sp">


    <utility.RobotoMedium
        android:id="@+id/tvEnterMobNumV2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_size_5dp"
        android:text="@string/vtwo_enter_mob_no"
        android:textAppearance="@style/RobotoBold"
        android:textColor="@color/vtwo_black"
        android:textSize="@dimen/text_size_16sp" />

    <LinearLayout
        android:id="@+id/llMobileNumInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_size_16sp"
        android:layout_marginBottom="@dimen/text_size_16sp"
        android:background="@drawable/vtwo_input_bg"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/text_size_14dp"
        android:paddingTop="@dimen/text_size_14dp"
        android:paddingRight="@dimen/text_size_14dp"
        android:paddingBottom="@dimen/text_size_14dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vtwo_country_code"
            android:textAppearance="@style/RobotoRegular"
            android:textColor="@color/vtwo_black"
            android:textSize="@dimen/text_size_16sp" />

        <View
            android:layout_width="@dimen/view_height_1dp"
            android:layout_height="@dimen/text_size_24dp"
            android:layout_marginLeft="@dimen/text_size_14dp"
            android:background="@color/vtwo_grey" />

        <EditText
            android:id="@+id/etMobileNumber"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_size_14dp"
            android:layout_marginLeft="@dimen/text_size_14dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:hint="@string/vtwo_mobile_num_hint"
            android:inputType="number"
            android:maxLength="11"
            android:singleLine="true"
            android:textAppearance="@style/RobotoRegular"
            android:textColorHint="@color/vtwo_grey"
            android:textSize="@dimen/text_size_14sp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="13dp"
        android:layout_marginBottom="5dp"
        android:text="@string/vtwo_otp_hint"
        android:textAppearance="@style/RobotoRegular"
        android:textColor="@color/vtwo_light_grey"
        android:textSize="@dimen/text_size_14sp"
        android:textStyle="italic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_size_14dp"
        android:orientation="vertical"
        android:visibility="gone">

        <utility.RobotoMedium
            android:id="@+id/tvEnterOTPV2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="@dimen/text_size_5dp"
            android:text="@string/otp_lbl"
            android:textAppearance="@style/RobotoBold"
            android:textColor="@color/vtwo_black"
            android:textSize="@dimen/text_size_16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <EditText
                android:id="@+id/etOTPV2"

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="@dimen/text_size_20dp"
                android:layout_weight="0.6"
                android:background="@drawable/vtwo_input_bg"
                android:inputType="number"
                android:maxLength="4"
                android:paddingLeft="@dimen/text_size_8dp"
                android:paddingTop="@dimen/text_size_14dp"
                android:paddingBottom="@dimen/text_size_14dp"
                android:singleLine="true"
                android:textAppearance="@style/RobotoRegular"
                android:textSize="17sp" />

            <utility.RobotoMedium
                android:id="@+id/tvOTPTimerV2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_size_20dp"
                android:layout_weight="0.4"
                android:padding="@dimen/text_size_14dp"
                android:text="@string/otp_timer_hint"
                android:textAppearance="@style/RobotoBold"
                android:textColor="@color/vtwo_black"
                android:textSize="@dimen/text_size_16sp" />

        </LinearLayout>

        <utility.RobotoMedium
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_size_5dp"
            android:layout_marginTop="@dimen/text_size27dp"
            android:text="@string/vtwo_resend_otp"
            android:textColor="@color/vtwo_blue"
            android:textSize="@dimen/text_size_14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/text_size_29dp"
        android:layout_marginTop="43dp"
        android:visibility="gone"
        android:layout_marginRight="@dimen/text_size_41dp"
        android:layout_marginBottom="@dimen/text_size_15dp">
        <CheckBox
            android:id="@+id/cbTermsAndConditions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vtwo_t_and_c_hint"
            android:textSize="@dimen/text_size_16sp"
            android:textAppearance="@style/RobotoMedium"
            android:textColor="@color/vtwo_black"
            android:gravity="top"
            android:paddingLeft="@dimen/text_size_16sp"/>
    </LinearLayout>

</LinearLayout>

