<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/g_white"
    tools:context=".Activity.review_activites.ReviewActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <include layout="@layout/layout_common_app_bar" />

        <utility.RobotoMedium
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/text_size_26dp"
        android:text="@string/str_you_have_updated_your_details"
        android:textSize="@dimen/text_size_16sp"
        android:layout_marginTop="@dimen/text_size40dp"
        android:textColor="@color/very_dark_blue" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_marginTop="@dimen/text_size_105dp"
            android:layout_marginLeft="@dimen/text_size10dp"
            android:layout_marginRight="@dimen/text_size10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/do_you_want_to_review_your_details"
                android:textColor="@color/very_dark_blue"
                android:gravity="center"
                android:layout_marginTop="@dimen/text_size_34dp"/>
            <utility.RobotoMedium
                android:id="@+id/tvReviewNav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_16sp"
                android:textColor="@color/navy_blue"
                android:text="@string/str_review"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/text_size_29dp"
                android:layout_marginLeft="@dimen/text_size10dp"
                android:layout_marginRight="@dimen/text_size10dp"
                android:paddingRight="5dp"
                android:clickable="true"
                android:drawableRight="@drawable/ic_forward_arrow"
                android:layout_marginBottom="@dimen/text_size_26dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <CheckBox
            android:id="@+id/cbAgreeTAndC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_size_57dp"
            android:layout_marginLeft="@dimen/text_size_14dp"
            android:layout_marginRight="78dp"
            android:paddingLeft="13dp"
            android:text="@string/str_agree_with_tc"
            android:textColor="@color/very_dark_blue"
            android:buttonTint="@color/very_dark_blue"
            android:textSize="16dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnReviewNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_alignParentBottom="true"
        android:background="@color/navy_blue"
        android:paddingTop="@dimen/text_size_19dp"
        android:paddingBottom="@dimen/text_size_18dp"
        android:text="@string/lbl_view_bank"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_16sp" />
</RelativeLayout>