<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/g_white"
    android:orientation="vertical"
    tools:context=".Activity.VehicleCategory">
    <include layout="@layout/vehicle_details_app_bar" />
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_size_8dp"
        android:layout_marginLeft="@dimen/text_size10dp"
        android:layout_marginRight="@dimen/text_size10dp"
        android:background="@color/white">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
    <utility.RobotoMedium
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/text_size_34dp"
    android:layout_marginLeft="@dimen/text_size_22dp"
    android:layout_marginRight="@dimen/text_size_19dp"
    android:text="@string/vehicle_category"
    android:textColor="@color/very_dark_blue"
    android:textSize="@dimen/text_size_16sp"/>

        <RadioGroup
            android:id="@+id/rgVehCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_size_33dp"
            android:layout_marginLeft="@dimen/text_size_19dp">

            <RadioButton
                android:id="@+id/radioNewCar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_car"
                android:layout_marginTop="10dp"
                android:checked="false"
                android:textSize="@dimen/text_size_16sp"
                android:textColor="@color/very_dark_blue"
                android:layout_marginBottom="@dimen/text_size_24dp"/>

            <RadioButton
                android:id="@+id/radioOldCar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/old_car"
                android:layout_marginTop="10dp"
                android:checked="false"
                android:textSize="@dimen/text_size_16sp"
                android:textColor="@color/very_dark_blue"
                android:layout_marginBottom="@dimen/text_size_24dp"/>

            <RadioButton
                android:id="@+id/radioNewBike"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_bike"
                android:layout_marginTop="10dp"
                android:checked="false"
                android:textSize="@dimen/text_size_16sp"
                android:textColor="@color/very_dark_blue"
                android:layout_marginBottom="@dimen/text_size_24dp"/>
        </RadioGroup>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>