<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/text_size_21dp"
    android:paddingRight="@dimen/text_size_22dp"
    android:background="@drawable/v2_rounded_light_grey_bg">
<TextView
    android:id="@+id/tvLoanAmountSB"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/v2_loan_amount"
    android:textColor="@color/vtwo_black"
    android:textSize="@dimen/text_size_12dp"
    android:textAppearance="@style/RobotoMedium"
    android:layout_marginTop="34dp"
    tools:ignore="SpUsage" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rupees_symbol"
        android:textColor="@color/vtwo_black"
        android:textSize="@dimen/text_size_14sp"
        android:textAppearance="@style/RobotoMedium"
        android:layout_marginTop="34dp"
        android:layout_alignParentRight="true"
        android:gravity="end"
        android:layout_toRightOf="@+id/tvLoanAmountSB"
        tools:ignore="SpUsage" />

    <SeekBar
        android:id="@+id/skLoanAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvLoanAmountSB"
        android:layout_marginTop="@dimen/text_size_17dp"
        android:layout_marginBottom="@dimen/text_size_31dp"
        android:thumb="@drawable/ic_vtwo_personal_details"
        android:progressTint="@drawable/v2_seekbar"
        tools:ignore="UnusedAttribute" />
    <TextView
        android:id="@+id/tvTenureSB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/v2_tenure"
        android:textColor="@color/vtwo_black"
        android:textSize="@dimen/text_size_12dp"
        android:textAppearance="@style/RobotoMedium"
        android:layout_below="@+id/skLoanAmount"
        android:layout_marginTop="@dimen/text_size_15dp"
        tools:ignore="SpUsage" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/v2_tenure_lbl"
        android:textColor="@color/vtwo_black"
        android:textSize="@dimen/text_size_14sp"
        android:textAppearance="@style/RobotoMedium"
        android:layout_marginTop="@dimen/text_size_15dp"
        android:layout_alignParentRight="true"
        android:gravity="end"
        android:layout_below="@+id/skLoanAmount"
        android:layout_toRightOf="@+id/tvTenureSB"
        tools:ignore="SpUsage" />

    <SeekBar
        android:id="@+id/skTenure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTenureSB"
        android:layout_marginTop="@dimen/text_size_17dp"
        android:layout_marginBottom="@dimen/text_size_31dp"
        android:thumb="@drawable/ic_vtwo_personal_details"
        android:progressTint="@drawable/v2_seekbar"
        tools:ignore="UnusedAttribute" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SUBMIT"
        android:textSize="@dimen/text_size_14sp"
        android:textColor="@color/white"
        android:textAppearance="@style/RobotoMedium"
        android:background="@drawable/vtwo_next_btn_bg"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/skTenure"
        android:layout_marginBottom="@dimen/text_size_19dp"/>



</RelativeLayout>